Addind - Create task -

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ToDoKevin</string>
+    <string name="title">title</string>
+    <string name="description">description</string>
 </resources>
